--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<a-text value="Meetup JSSP" position="1.5907967255518254 1.8458754823256327 -2.4315541016509368" text="width:12.79;color:#fffb00;align:center;transparent:false;height:1.2;tabSize:6.08;wrapCount:45.01;side:double;negate:false;letterSpacing:3.63;lineHeight:0.32" rotation="4.073280136339039 -133.42867517541765 0.36543004270839324"></a-text>
 			<a-text value="Wo Makers Code" position="-0.6894893424372985 4.222711467002384 -4.392360252540423" text="width:12.79;color:#ff8ad8;align:center;transparent:false;height:1.2;tabSize:6.08;wrapCount:45.01;side:double;negate:false;letterSpacing:3.63;lineHeight:0.32" rotation="80.42147038131918 73.15282613398777 -107.57175896115112"></a-text>
 			<a-sky color="#ECECEC" material="color:#005493"></a-sky>
-			<a-entity position="0 0 5">
+			<a-entity position="-0.616588621032462 1.2657414294133722 -9.323178014447446">
 				<a-camera position="-0.616588621032462 1.2657414294133722 -9.323178014447446" rotation="-11.161007389998678 -505.6925499824638 0"></a-camera>
 			</a-entity>
 		</a-scene>
