Corrigindo visualizacao no modo vr

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 			<a-text value="Meetup JSSP" position="1.5907967255518254 1.8458754823256327 -2.4315541016509368" text="width:12.79;color:#fffb00;align:center;transparent:false;height:1.2;tabSize:6.08;wrapCount:45.01;side:double;negate:false;letterSpacing:3.63;lineHeight:0.32" rotation="4.073280136339039 -133.42867517541765 0.36543004270839324"></a-text>
 			<a-text value="Wo Makers Code" position="-0.6894893424372985 4.222711467002384 -4.392360252540423" text="width:12.79;color:#ff8ad8;align:center;transparent:false;height:1.2;tabSize:6.08;wrapCount:45.01;side:double;negate:false;letterSpacing:3.63;lineHeight:0.32" rotation="80.42147038131918 73.15282613398777 -107.57175896115112"></a-text>
 			<a-sky color="#ECECEC" material="color:#005493"></a-sky>
-			<a-entity position="0 0 5">
-				<a-camera position="0.6 1.26 -9.32" rotation="-12.49 -347.89 0" camera="active:true"></a-camera>
+			<a-entity position="-1.58 1.26 -4.48" camera look-controls>
+				<!-- <a-camera position="0.6 1.26 -9.32" rotation="-12.49 -347.89 0" camera="active:true"></a-camera> -->
 			</a-entity>
 		</a-scene>
 	</body>
