--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
 		<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
 	</head>
 	<body>
-		<a-scene>
-			<a-box position="-3.3519770923749093 0.07781158382272402 1.249467571541519" rotation="-29.38315722917435 73.79824782807121 -54.324951741849816" color="#4CC3D9" scale="9.215814623076843 5.368203885895893 4.817116046867604" material="color:#0433ff"></a-box>
-			<a-sphere position="-1.0646493358463576 1.100012462258035 -7.992557540654527" radius="1.25" color="#EF2D5E" scale="1.8541064937935543 -1.5737229984150924 1.9004161907917687"></a-sphere>
-			<a-cylinder position="4.583100431899601 0.28791390542839634 -6.122153231039341" radius="0.5" height="1.5" color="#FFC65D" rotation="4.802418805600719 28.186310389010163 52.18877395470695" scale="2.4268440770779787 3.31470225731361 2.62750572006724"></a-cylinder>
-			<a-plane position="0.9121984871222342 -0.02506813954885878 -2.758464207911744" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" geometry="width:12.88;height:14.88" material="color:#009193;vertexColors:face"></a-plane>
-			<a-text value="Meetup JSSP" position="1.5907967255518254 1.8458754823256327 -2.4315541016509368" text="width:12.79;color:#fffb00;align:center;transparent:false;height:1.2;tabSize:6.08;wrapCount:45.01;side:double;negate:false;letterSpacing:3.63;lineHeight:0.32" rotation="4.073280136339039 -133.42867517541765 0.36543004270839324"></a-text>
-			<a-text value="Wo Makers Code" position="-0.6894893424372985 4.222711467002384 -4.392360252540423" text="width:12.79;color:#ff8ad8;align:center;transparent:false;height:1.2;tabSize:6.08;wrapCount:45.01;side:double;negate:false;letterSpacing:3.63;lineHeight:0.32" rotation="80.42147038131918 73.15282613398777 -107.57175896115112"></a-text>
+		<a-scene class="fullscreen">
+			<canvas class="a-canvas" data-aframe-canvas="true" width="300" height="150"></canvas>
+			<a-box position="-3.363454715326731 0.07781158382272402 6.7098862687153575" rotation="-29.38315722917435 73.79824782807121 -54.324951741849816" color="#4CC3D9" scale="9.215814623076843 5.368203885895893 4.817116046867604" material="color:#0433ff"></a-box>
+			<a-sphere position="-1.1813544668266203 1.100012462258035 -4.489455892959692" radius="1.25" color="#EF2D5E" scale="1.8541064937935543 -1.5737229984150924 1.9004161907917687"></a-sphere>
+			<a-cylinder position="5.803568766672851 0.28791390542839634 -0.9642682238804214" radius="0.5" height="1.5" color="#FFC65D" rotation="4.802418805600719 28.186310389010163 52.18877395470695" scale="2.4268440770779787 3.31470225731361 2.62750572006724"></a-cylinder>
+			<a-plane position="0.9121984871222342 -0.02506813954885878 1.1632710176239174" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" geometry="width:12.88;height:14.88" material="color:#009193;vertexColors:face"></a-plane>
+			<a-text value="Meetup JSSP" position="2.5981927552005373 1.8458754823256327 3.1643453280573617" text="width:12.79;color:#fffb00;align:center;transparent:false;height:1.2;tabSize:6.08;wrapCount:45.01;side:double;negate:false;letterSpacing:3.63;lineHeight:0.32" rotation="4.073280136339039 -133.42867517541765 0.36543004270839324"></a-text>
+			<a-text value="Wo Makers Code" position="-0.6894893424372985 4.222711467002384 -0.021329811001458587" text="width:12.79;color:#ff8ad8;align:center;transparent:false;height:1.2;tabSize:6.08;wrapCount:45.01;side:double;negate:false;letterSpacing:3.63;lineHeight:0.32" rotation="80.42147038131918 73.15282613398777 -107.57175896115112"></a-text>
 			<a-sky color="#ECECEC" material="color:#005493"></a-sky>
-			<a-entity position="-1.58 1.26 -4.48" camera look-controls>
-				<!-- <a-camera position="0.6 1.26 -9.32" rotation="-12.49 -347.89 0" camera="active:true"></a-camera> -->
-			</a-entity>
 		</a-scene>
 	</body>
 </html>
